Changes for 1.0alpha10:

 - added new host type: Workstation + frontends/php/images/sysmaps/Workstation.png
 - added table triger_depends
 - calls to perror() were changed to syslog() where possible
 - added status line to full screen version of form "Status of Triggers"

 - added directory upgrades/dbpatches/1.0alpha9_to_1.0alpha10/
 - removed parameters net[listen_21],net[listen_22],net[listen_25],net[listen_110],
   net[listen_143]
 - added parameters check_service[ftp],check_service[smtp],check_service[ssh],check_service[pop],
   check_service[nntp],check_service[imap]
 - added constant TRAPPERD_FORKS (default is 10)
 - added constant AGENTD_FORKS (default is 10)
 - minor fixed in PHP code
 - added some basic information on zabbix_trapperd to manual.txt
 - added zabbix_trapperd
 - minor fixes in manual.txt
 - check for filesystem /proc in configure.in
 - table "Supported parameters by platform" added to manual.txt
 - removed recommendation of PostgreSQL from manual.txt
 - use of /proc was changed to native calls to sysinfo where possible
 - fixed double appearing of complex triggers in list of triggers
 - added form for changing host details
 - All calculations are made in C code instead of SQL statements
 - Housekeping now runs as separate process, however it's part of zabix_suckerd
 - "Not monitored" will not be displayed
 - Calls to mhash() changed to md5(), thus eliminating use of php4-mhash module.
 - Added missing line in zabbix_suckerd. Now it reads items.snmp_oid from DB.

Changes for 1.0alpha9:

 - zabbix_suckerd fixed to listen on interfaces other than 127.0.0.1
 - Fixed nasty bug in DB structure. One of indexes of table functions was incorrectly defined as unique.
 - added patches to upgrades/dbpatches/1.0alpha8_to_1.0alpha9
 - Added status line to all PHP forms (like, "[Host added]")

Changes for 1.0alpha8:

 - changed type of actions.message and alerts.message to blob(text)
 - added new parameters: io[disk_*]