@@ -4,8 +4,6 @@
 
 	include "include/config.inc";
 
-	phpinfo();
-
 	show_header($page["title"],0,0);
 ?>
 
