@@ -194,6 +194,19 @@
 	$col=0;
 	for($i=0;$i<DBnum_rows($result);$i++)
 	{
+		$triggerid=DBget_field($result,$i,0);
+
+// Check for dependencies
+
+		$sql="select count(*) from trigger_depends d, triggers t where d.triggerid_down=$triggerid and d.triggerid_up=t.triggerid and t.istrue=1";
+		$result2=DBselect($sql);
+
+		if(DBget_field($result2,0,0)>0)
+		{
+			continue;
+		}
+
+
 		if($col==1)
 		{
 			echo "\n<TR BGCOLOR=#EEEEEE>";
@@ -205,7 +218,6 @@
 		}
 		$expression=DBget_field($result,$i,4);
 		$description=DBget_field($result,$i,2);
-		$triggerid=DBget_field($result,$i,0);
 		$istrue=DBget_field($result,$i,1);
 		$lastcheck=DBget_field($result,$i,3);
 		$priority=DBget_field($result,$i,5);
